# mysql-server

./: Cargo.toml  README.md  azure-pipelines.yml
examples/: psql_as_mysql.rs  serve_auth.rs  serve_one.rs
src/: commands.rs  lib.rs  packet.rs  params.rs  resultset.rs  utils.rs  writers.rs
src/value/: decode.rs  encode.rs  utils.rs
tests/: async.rs  main.rs
tests/it/: async.rs  main.rs  sync.rs
