[package]
name = "msql-srv"
version = "0.9.6"
edition = "2021"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "msql-srv", build = "27" }
codecov = { repository = "jonhoo/msql-srv", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
nom = "7.1.0"
mysql_common = { version = "0.28.0", features = ["chrono"] }
byteorder = "1.4.3"
chrono = "0.4.19"

[dev-dependencies]
mysql = "22.0.0"
mysql_async = "0.29.0"
postgres = "0.19.2"
slab = "0.4.5"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.0"
